--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,19 @@ numpy>=1.24.0
 requests>=2.28.0
 Pillow>=9.0.0
 scikit-learn>=1.3.0
+
+# Build dependencies for kenlm
+setuptools>=60.0.0
+wheel>=0.38.0
+Cython>=0.29.0
+
+# KenLM và dependencies
 python-crfsuite>=0.9.12
 kenlm>=0.2.0
+
+# Jiayan và dependencies
 jiayan
 kagglehub
+
+# Additional dependencies cho Streamlit Cloud
+packaging>=21.0
