--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,19 @@ requests>=2.28.0
 Pillow>=9.0.0
 scikit-learn>=1.3.0
 
-# Build dependencies for kenlm
+# Build dependencies
 setuptools>=60.0.0
 wheel>=0.38.0
-Cython>=0.29.0
 
-# KenLM và dependencies
+# CRF for basic text processing (without kenlm dependency)
 python-crfsuite>=0.9.12
-kenlm>=0.2.0
 
-# Jiayan và dependencies
-jiayan
+# Skip problematic packages due to Python 3.13 compatibility
+# kenlm>=0.2.0  # Commented out due to Python 3.13 issues
+# jiayan       # Depends on kenlm
+
+# Use kagglehub for model downloads
 kagglehub
 
-# Additional dependencies cho Streamlit Cloud
+# Additional dependencies for Streamlit Cloud
 packaging>=21.0
