--- a/requirements_backup.txt
+++ b/requirements_backup.txt
@@ -1,4 +1,3 @@
-# Alternative requirements nếu kenlm vẫn lỗi
 streamlit>=1.28.0
 torch>=2.0.0
 transformers>=4.30.0
@@ -12,12 +11,14 @@ setuptools>=60.0.0
 wheel>=0.38.0
 Cython>=0.29.0
 
-# Alternative: Skip kenlm nếu không build được
-# python-crfsuite>=0.9.12
-# kenlm>=0.2.0
+# Skip kenlm due to Python 3.13 compatibility issues
+# Use basic text processing instead
+python-crfsuite>=0.9.12
 
-# Jiayan without kenlm (fallback mode)
+# Jiayan without kenlm dependency (will use fallback mode)
 # jiayan
+
+# Use kagglehub for model downloads
 kagglehub
 
 # Additional dependencies cho Streamlit Cloud  
